# zen

./: .clang-format  .gitignore  .latest-snapshot  .mcp.json  .zenproject  ACTUAL_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_SPECIFICATION.md  BUILDING.md  CHANGELOG.md  CLASS_BATTLE_TEST_RESULTS.md  CLASS_STRESS_TEST_REPORT.md  CLAUDE.md  CMakeLists.txt  COMMA_PARSING_BUG.md  CRISIS_RESOLVED.md  ECOSYSTEM_INTEGRATION_ANALYSIS.md  EMERGENCY_FIX.md  FINAL_TEST_REPORT.md  FIXBOT.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JSON_YAML_TEST_REPORT.md  LEXER_ENHANCEMENTS.md  LICENSE  MANIFEST.json  MANIFEST_COMPLIANCE_ARCHITECTURE.md  MANIFEST_CRISIS_SOLUTION.md  MEMORY_AUDIT_REPORT.md  MEMORY_MANIFEST_ISSUE.md  MEMORY_SYSTEM_COMPLETION_REPORT.md  MIGRATE.md  MIGRATION_COMPLETE.md  Makefile  Makefile.yaml  README.md  REMAINING_ISSUES.md  SESSION_SUMMARY.md  SESSION_SUMMARY_FINAL.md  SWARM_2_COORDINATION.md  (+824 more)
.githooks/: pre-commit
.github/: copilot-instructions.md
benchmark/: fibonacci_test.zen  measure_performance.sh  parse_benchmark.zen  performance_validation.zen  profile_test.zen  simple_benchmark.zen  tiny_test.zen
docs/: ARCHITECT_LANGUAGE_DESIGN_VALIDATION.md  FINAL.md  FUTURE.md  README.md  SWARM_ENHANCEMENTS.md  SWARM_GUIDE.md  ZEN.md  ch01-getting-started.md  ch03-crypto.md  ch04-authenticated-data.md  ch06-networking.md  ch07-pen.md  ch08-contributing.md  ch09-mcp.md  lib-identity.md
examples/: README_UNDECIDABLE.md  test_undecidable_final.zen  test_undecidable_logic.zen  undecidable_ai_reasoning.zen  undecidable_distributed_systems.zen  undecidable_game_theory.zen  undecidable_global_applications.zen  undecidable_quantum_computing.zen
html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_c2f24a5303e07ecee1a447ad8ca3cd94.html  dir_c2f24a5303e07ecee1a447ad8ca3cd94_dep.map  dir_c2f24a5303e07ecee1a447ad8ca3cd94_dep.md5  graph_legend.html  index.html
lib/: axe.js  axe.min.js  dht.js  dht.min.js  identity.js  identity.min.js  mcp.js  mcp.min.js  minify.js  minify.min.js  peer-registry.js  peer-registry.min.js  pex.js  pex.min.js  preg.js  preg.min.js  protocol.js  protocol.min.js  radisk.js  rfs.js  rfs.min.js  scan.js  scan.min.js  server.js  server.min.js  store.js  store.min.js  wallet-zen.js  webrtc.js  webrtc.min.js  wire.js  wire.min.js
script/: install.sh  mcp.sh  relay.service  server.js  ssl.sh  uninstall.sh  update.sh  zen.sh
scripts/: add_missing_stdlib_files.js  add_missing_to_manifest.js  enforce_manifest.js  fix_all_todos.js  fix_doxygen.sh  fix_manifest_descriptions.js  fix_specific_doxygen.sh  migrate_structure.sh  reality.js  regenerate_manifest.js  setup.sh  (+5 more)
(+1541 files in other folders)
